tests/cases/ownership/ok/forget-skips-drop-lowering.ari
impl Drop for i64 {
  fn drop(self) -> void {
  }
}

fn main() -> i64 {
  let token: own i64 = 5;
  forget token;
  return 0;
}
