tests/cases/ownership/errors/undropped-own.ari
fn main() -> i64 {
  {
    let token: own i64 = 7;
  }
  return 0;
}
